# agent-compiler

./: .gitignore  ROADMAP.md  build_exe.py  config.example.yaml  config.yaml  pyproject.toml  rules.yaml  run_app.py
examples/: demo_cli.py
src/agent_compiler/: __init__.py  agent.py  compiler.py  demo_tools.py  embeddings.py  types.py
src/agent_compiler/adapters/: __init__.py  base.py  comfyui.py  hermes.py  openclaw.py  proxy.py
src/agent_compiler/cli/: __init__.py  app.py
src/agent_compiler/compiler/: __init__.py  compiler.py
src/agent_compiler/core/: __init__.py  agent.py  config.py  context_manager.py  executor.py  mcp_client.py  memory.py  planning.py  types.py
src/agent_compiler/embeddings/: __init__.py  base.py  lightweight.py  neural.py
src/agent_compiler/layers/: base.py  llm_fallback.py  pattern_cache.py  rule_engine.py  thought_tree.py
src/agent_compiler/skills/: __init__.py  loader.py
src/agent_compiler/storage/: base.py  cloud_store.py  disk_store.py  ram_store.py
src/agent_compiler/tools/: __init__.py  comfyui_tools.py  demo_tools.py  registry.py  system_tools.py
src/agent_compiler/web/: models.py  server.py
src/agent_compiler/web/static/: index.html
tests/: test_agent.py  test_cache_seeds.py  test_pattern_cache.py  test_rule_engine.py
