[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-compiler"
version = "0.1.0"
description = "LLM-as-compiler: three-layer agent with rule engine, pattern cache, and LLM fallback"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30", "openai>=1.0"]
cloud = ["boto3>=1.28"]
dev = ["pytest>=7.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-compiler = "agent_compiler.cli.app:main"
agent-compiler-proxy = "agent_compiler.adapters.proxy:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

